--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button"
+        android:text="@string/click"
+        android:onClick="addNum"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="34dp" />
 
