--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,16 @@
         android:layout_height="wrap_content"
         android:hint="@string/hintName"/>
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/click"
-        android:onClick="addNum"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="34dp" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/reset"
-        android:onClick="addNum"
         android:text="@string/reset"/>
 
 
