set Mail Action

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/second"
         android:text="@string/Go"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sendMail"
+        android:text="@string/SendMail"/>
 
 </LinearLayout>
